--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,61 +9,62 @@ body {
   height: 410px;
   position: relative;
   padding: 35px 125px;
+  margin: auto;
 }
 
-/* line 12, ../sass/main.scss */
+/* line 13, ../sass/main.scss */
 .one {
   background-color: #ccc;
 }
 
-/* line 16, ../sass/main.scss */
+/* line 17, ../sass/main.scss */
 .two {
   background-color: #aaa;
 }
 
-/* line 20, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 .three {
   background-color: #888;
 }
 
-/* line 24, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .four {
   background-color: #aaa;
 }
 
-/* line 28, ../sass/main.scss */
+/* line 29, ../sass/main.scss */
 .headtext {
   text-align: right;
 }
 
-/* line 32, ../sass/main.scss */
+/* line 33, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 37, ../sass/main.scss */
+/* line 38, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
 }
 
-/* line 41, ../sass/main.scss */
+/* line 42, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
 }
 
-/* line 45, ../sass/main.scss */
+/* line 46, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
 }
 
-/* line 50, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
 .twoh2 {
   margin-left: calc(50% - 420px);
 }
 
-/* line 54, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 .circleImg {
   position: absolute;
   top: 75px;
@@ -73,36 +74,36 @@ body {
   background-color: #000;
 }
 
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .listHolder {
   margin-top: 2.8em;
   width: 700px;
   margin-left: calc(50% - 400px);
 }
 
-/* line 70, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 li {
   padding-top: 30px;
 }
 
-/* line 75, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 .list {
   column-count: 1;
 }
 
-/* line 79, ../sass/main.scss */
+/* line 80, ../sass/main.scss */
 .threeh2 {
   margin-left: calc(50% - 400px);
 }
 
-/* line 83, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 .tileContainer {
   position: relative;
   margin-left: calc(50% - 400px);
   width: 450px;
 }
 
-/* line 89, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -113,7 +114,7 @@ li {
   border: 1px solid black;
 }
 
-/* line 99, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .descriptionContainer {
   position: absolute;
   bottom: 0px;
@@ -123,12 +124,12 @@ li {
   padding-bottom: 0px;
 }
 
-/* line 108, ../sass/main.scss */
+/* line 109, ../sass/main.scss */
 .description {
   text-align: center;
 }
 
-/* line 112, ../sass/main.scss */
+/* line 113, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
