--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,37 @@
+// Here we define the lower and upper bounds for each media size
+$small-range: (0em, 33.750em); /* 0, 540px */
+$medium-range: (33.750em, 64em); /* 641px, 1024px */
+$large-range: (64.063em, 90em); /* 1025px, 1440px */
+$xlarge-range: (90.063em); /* 1441px */
+
+// Media Queries
+$screen: "only screen" !default;
+
+$landscape: "#{$screen} and (orientation: landscape)" !default;
+$portrait: "#{$screen} and (orientation: portrait)" !default;
+
+$small-up: $screen !default;
+$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
+
+$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
+$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
+
+$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
+$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
+
+$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
+$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
+
+
 body {
 	padding:0;
 	margin:0;
 }
 
 .stripe {
-	height:410px;
+	min-height:410px;
 	position:relative;
-	padding:35px 125px;
-	margin: auto;
+	padding:3em;
 }
 
 .one {
@@ -20,6 +44,7 @@ body {
 
 .three {
     background-color:#888;
+    padding: 1.5em;
 }
 
 .four {
@@ -54,16 +79,15 @@ body {
 
 .circleImg {
 	position:absolute;
-	top:75px;
-	right:175px;
-	height:200px;
-	width:200px;
+	top:3em;
+	right:3em;
+	height:100%;
+	width:auto;
 	background-color:#000;
 }
 
 .listHolder {
 	margin-top:2.8em;
-	width:700px;
 	margin-left:calc(50% - 400px);
 }
 
@@ -82,17 +106,19 @@ li {
 }
 
 .tileContainer {
+	/*
 	position:relative;
 	margin-left:calc(50% - 400px);
 	width:450px;
+	*/
 }
 
 .tile {
 	display:inline-block;
 	position:relative;
-	width:125px;
-	height:125px;
-	margin:30px;
+	width:4.854101966249685em;
+	height:4.854101966249685em;
+	margin:1.5em;
 	background-color:#fff;
 	border:1px solid black;
 }
@@ -161,7 +187,22 @@ li {
 
 
 
+@media #{$small-up} { }
+@media #{$small-only} { }
 
+@media #{$medium-up} { }
+@media #{$medium-only} {  
+    .tile {
+       width: 12.70820393249937em;
+       height: 12.70820393249937em;
+    }
+}
+
+@media #{$large-up} { }
+@media #{$large-only} { }
+
+@media #{$xlarge-up} { }
+@media #{$xlarge-only} { }
 
 
 
