--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,120 +1,125 @@
-/* line 1, ../sass/main.scss */
+/* 0, 540px */
+/* 641px, 1024px */
+/* 1025px, 1440px */
+/* 1441px */
+/* line 26, ../sass/main.scss */
 body {
   padding: 0;
   margin: 0;
 }
 
-/* line 6, ../sass/main.scss */
+/* line 31, ../sass/main.scss */
 .stripe {
-  height: 410px;
+  min-height: 410px;
   position: relative;
-  padding: 35px 125px;
-  margin: auto;
+  padding: 3em;
 }
 
-/* line 13, ../sass/main.scss */
+/* line 37, ../sass/main.scss */
 .one {
   background-color: #ccc;
 }
 
-/* line 17, ../sass/main.scss */
+/* line 41, ../sass/main.scss */
 .two {
   background-color: #aaa;
 }
 
-/* line 21, ../sass/main.scss */
+/* line 45, ../sass/main.scss */
 .three {
   background-color: #888;
+  padding: 1.5em;
 }
 
-/* line 25, ../sass/main.scss */
+/* line 50, ../sass/main.scss */
 .four {
   background-color: #aaa;
 }
 
-/* line 29, ../sass/main.scss */
+/* line 54, ../sass/main.scss */
 .headtext {
   text-align: right;
 }
 
-/* line 33, ../sass/main.scss */
+/* line 58, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 38, ../sass/main.scss */
+/* line 63, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
 }
 
-/* line 42, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
 }
 
-/* line 46, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
 }
 
-/* line 51, ../sass/main.scss */
+/* line 76, ../sass/main.scss */
 .twoh2 {
   margin-left: calc(50% - 420px);
 }
 
-/* line 55, ../sass/main.scss */
+/* line 80, ../sass/main.scss */
 .circleImg {
   position: absolute;
-  top: 75px;
-  right: 175px;
-  height: 200px;
-  width: 200px;
+  top: 3em;
+  right: 3em;
+  height: 100%;
+  width: auto;
   background-color: #000;
 }
 
-/* line 64, ../sass/main.scss */
+/* line 89, ../sass/main.scss */
 .listHolder {
   margin-top: 2.8em;
-  width: 700px;
   margin-left: calc(50% - 400px);
 }
 
-/* line 71, ../sass/main.scss */
+/* line 95, ../sass/main.scss */
 li {
   padding-top: 30px;
 }
 
-/* line 76, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .list {
   column-count: 1;
 }
 
-/* line 80, ../sass/main.scss */
+/* line 104, ../sass/main.scss */
 .threeh2 {
   margin-left: calc(50% - 400px);
 }
 
-/* line 84, ../sass/main.scss */
+/* line 108, ../sass/main.scss */
 .tileContainer {
-  position: relative;
-  margin-left: calc(50% - 400px);
-  width: 450px;
+  /*
+  position:relative;
+  margin-left:calc(50% - 400px);
+  width:450px;
+  */
 }
 
-/* line 90, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
-  width: 125px;
-  height: 125px;
-  margin: 30px;
+  width: 4.854101966249685em;
+  height: 4.854101966249685em;
+  margin: 1.5em;
   background-color: #fff;
   border: 1px solid black;
 }
 
-/* line 100, ../sass/main.scss */
+/* line 126, ../sass/main.scss */
 .descriptionContainer {
   position: absolute;
   bottom: 0px;
@@ -124,12 +129,12 @@ li {
   padding-bottom: 0px;
 }
 
-/* line 109, ../sass/main.scss */
+/* line 135, ../sass/main.scss */
 .description {
   text-align: center;
 }
 
-/* line 113, ../sass/main.scss */
+/* line 139, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
@@ -170,3 +175,10 @@ li {
 }
 
 */
+@media only screen and (min-width: lower-bound(33.75em, 64em)) and (max-width: upper-bound(33.75em, 64em)) {
+  /* line 195, ../sass/main.scss */
+  .tile {
+    width: 12.70820393249937em;
+    height: 12.70820393249937em;
+  }
+}
