--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -27,49 +27,47 @@ body {
 
 /* line 45, ../sass/main.scss */
 .three {
+  text-align: center;
   background-color: #888;
   padding: 1.5em;
 }
 
-/* line 50, ../sass/main.scss */
+/* line 51, ../sass/main.scss */
 .four {
   background-color: #aaa;
 }
 
-/* line 54, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 .headtext {
   text-align: right;
 }
 
-/* line 58, ../sass/main.scss */
+/* line 59, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 63, ../sass/main.scss */
+/* line 64, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
 }
 
-/* line 67, ../sass/main.scss */
+/* line 68, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
 }
 
-/* line 71, ../sass/main.scss */
+/* line 72, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
+  orphans: 3;
 }
 
-/* line 76, ../sass/main.scss */
-.twoh2 {
-  margin-left: calc(50% - 420px);
-}
-
-/* line 80, ../sass/main.scss */
+/* line 82, ../sass/main.scss */
 .circleImg {
+  display: none;
   position: absolute;
   top: 3em;
   right: 3em;
@@ -78,34 +76,30 @@ body {
   background-color: #000;
 }
 
-/* line 89, ../sass/main.scss */
+/* line 92, ../sass/main.scss */
 .listHolder {
   margin-top: 2.8em;
-  margin-left: calc(50% - 400px);
 }
 
-/* line 95, ../sass/main.scss */
+/* line 98, ../sass/main.scss */
 li {
   padding-top: 30px;
 }
 
-/* line 100, ../sass/main.scss */
+/* line 103, ../sass/main.scss */
 .list {
   column-count: 1;
 }
 
-/* line 104, ../sass/main.scss */
+/* line 107, ../sass/main.scss */
 .threeh2 {
-  margin-left: calc(50% - 400px);
+  text-align: center;
 }
 
-/* line 108, ../sass/main.scss */
+/* line 111, ../sass/main.scss */
 .tileContainer {
-  /*
-  position:relative;
-  margin-left:calc(50% - 400px);
-  width:450px;
-  */
+  display: inline;
+  text-align: center;
 }
 
 /* line 116, ../sass/main.scss */
@@ -120,6 +114,11 @@ li {
 }
 
 /* line 126, ../sass/main.scss */
+.tileText {
+  text-align: center;
+}
+
+/* line 130, ../sass/main.scss */
 .descriptionContainer {
   position: absolute;
   bottom: 0px;
@@ -129,12 +128,12 @@ li {
   padding-bottom: 0px;
 }
 
-/* line 135, ../sass/main.scss */
+/* line 139, ../sass/main.scss */
 .description {
   text-align: center;
 }
 
-/* line 139, ../sass/main.scss */
+/* line 143, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
@@ -175,10 +174,47 @@ li {
 }
 
 */
-@media only screen and (min-width: lower-bound(33.75em, 64em)) and (max-width: upper-bound(33.75em, 64em)) {
-  /* line 195, ../sass/main.scss */
+@media (min-width: 28.5em) and (max-width: 53.25em) {
+  /* line 196, ../sass/main.scss */
   .tile {
-    width: 12.70820393249937em;
-    height: 12.70820393249937em;
+    width: 9em;
+    height: 9em;
+  }
+
+  /* line 202, ../sass/main.scss */
+  .descriptionContainer {
+    display: block;
+  }
+
+  /* line 206, ../sass/main.scss */
+  .tileText {
+    display: none;
+  }
+}
+@media (min-width: 53.315em) {
+  /* line 212, ../sass/main.scss */
+  .tile {
+    width: 9em;
+    height: 9em;
+  }
+
+  /* line 217, ../sass/main.scss */
+  .descriptionContainer {
+    display: block;
+  }
+
+  /* line 221, ../sass/main.scss */
+  .tileText {
+    display: none;
+  }
+
+  /* line 225, ../sass/main.scss */
+  .tileContainer {
+    max-width: 36.5em;
+  }
+
+  /* line 229, ../sass/main.scss */
+  .tile {
+    display: inline-block;
   }
 }
