--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,28 +1,3 @@
-// Here we define the lower and upper bounds for each media size
-$small-range: (0em, 33.750em); /* 0, 540px */
-$medium-range: (33.750em, 64em); /* 641px, 1024px */
-$large-range: (64.063em, 90em); /* 1025px, 1440px */
-$xlarge-range: (90.063em); /* 1441px */
-
-// Media Queries
-$screen: "only screen" !default;
-
-$landscape: "#{$screen} and (orientation: landscape)" !default;
-$portrait: "#{$screen} and (orientation: portrait)" !default;
-
-$small-up: $screen !default;
-$small-only: "#{$screen} and (max-width: #{upper-bound($small-range)})" !default;
-
-$medium-up: "#{$screen} and (min-width:#{lower-bound($medium-range)})" !default;
-$medium-only: "#{$screen} and (min-width:#{lower-bound($medium-range)}) and (max-width:#{upper-bound($medium-range)})" !default;
-
-$large-up: "#{$screen} and (min-width:#{lower-bound($large-range)})" !default;
-$large-only: "#{$screen} and (min-width:#{lower-bound($large-range)}) and (max-width:#{upper-bound($large-range)})" !default;
-
-$xlarge-up: "#{$screen} and (min-width:#{lower-bound($xlarge-range)})" !default;
-$xlarge-only: "#{$screen} and (min-width:#{lower-bound($xlarge-range)}) and (max-width:#{upper-bound($xlarge-range)})" !default;
-
-
 body {
 	padding:0;
 	margin:0;
@@ -82,15 +57,16 @@ body {
 .circleImg {
 	display:none;
 	position:absolute;
-	top:3em;
-	right:3em;
-	height:100%;
-	width:auto;
+	top:10em;
+	right:7em;
+	height:10em;
+	width:10em;
 	background-color:#000;
 }
 
 .listHolder {
 	margin-top:2.8em;
+	max-width:45em;
 	
 }
 
@@ -101,7 +77,7 @@ li {
 }
 
 .list {
-	column-count:1;
+	
 }
 
 .threeh2 {
@@ -229,8 +205,41 @@ li {
     .tile {
         display:inline-block;
     }
-    
+    .list { 
+    list-style-position: inside;
+    -moz-column-count: 2;
+    -moz-column-gap: 25px;
+    -webkit-column-count: 2;
+    -webkit-column-gap: 25px;
+    column-count: 2;
+    column-gap: 25px;
+    }
+    .list > li {
+    display:list-item;
+    }
 }
+
+@media (min-width: 65.632em) {
+	.circleImg {
+	display:block;
+	}
+	.tileContainer:nth-child(2) {
+	background-color:red;
+	}
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
