--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -1,67 +1,68 @@
-/* line 1, ../sass/main.scss */
+/* line 9, ../sass/main.scss */
 body {
   padding: 0;
   margin: 0;
 }
 
-/* line 6, ../sass/main.scss */
+/* line 14, ../sass/main.scss */
 .stripe {
   min-height: 410px;
   position: relative;
-  padding: 3em;
+  padding: 3em .769em;
 }
 
-/* line 12, ../sass/main.scss */
+/* line 21, ../sass/main.scss */
 .one {
   background-color: #ccc;
 }
 
-/* line 16, ../sass/main.scss */
+/* line 25, ../sass/main.scss */
 .two {
   background-color: #aaa;
 }
 
-/* line 20, ../sass/main.scss */
+/* line 29, ../sass/main.scss */
 .three {
   text-align: center;
-  background-color: #888;
-  padding: 1.5em;
+  background-color: white;
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
 }
 
-/* line 26, ../sass/main.scss */
+/* line 36, ../sass/main.scss */
 .four {
   background-color: #aaa;
 }
 
-/* line 30, ../sass/main.scss */
+/* line 40, ../sass/main.scss */
 .headtext {
   text-align: right;
 }
 
-/* line 34, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 39, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
 }
 
-/* line 43, ../sass/main.scss */
+/* line 53, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
 }
 
-/* line 47, ../sass/main.scss */
+/* line 57, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 57, ../sass/main.scss */
+/* line 67, ../sass/main.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -72,146 +73,198 @@ body {
   background-color: #000;
 }
 
-/* line 67, ../sass/main.scss */
+/* line 77, ../sass/main.scss */
 .listHolder {
   margin-top: 2.8em;
   max-width: 45em;
 }
 
-/* line 74, ../sass/main.scss */
+/* line 84, ../sass/main.scss */
 li {
   padding-top: 30px;
 }
 
-/* line 83, ../sass/main.scss */
-.threeh2 {
-  text-align: center;
-}
-
-/* line 87, ../sass/main.scss */
+/* line 93, ../sass/main.scss */
 .tileContainer {
-  display: inline;
+  display: block;
+  margin: 0 auto;
   text-align: center;
 }
 
-/* line 92, ../sass/main.scss */
+/* line 99, ../sass/main.scss */
+.floatTitle {
+  display: block;
+  width: 13.8em;
+  margin-top: .769em;
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-left: calc(50% - 126px);
+  border-top: solid white 1px;
+  margin-right: .769em;
+}
+
+/* line 112, ../sass/main.scss */
+.threeh2 {
+  font-family: "calibri";
+  font-weight: 200;
+  text-align: left;
+  display: block;
+  border-top: 1px solid black;
+  color: black;
+  margin-top: -1px;
+  padding-top: 8px;
+  padding-bottom: .769em;
+  margin-bottom: 0em;
+}
+
+/* line 125, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
-  width: 4.854101966249685em;
-  height: 4.854101966249685em;
-  margin: 1.5em;
-  background-color: #fff;
-  border: 1px solid black;
-}
-
-/* line 102, ../sass/main.scss */
-.tileText {
-  text-align: center;
-}
-
-/* line 106, ../sass/main.scss */
-.descriptionContainer {
-  position: absolute;
-  bottom: 0px;
-  width: 100%;
-  height: 20%;
+  width: 13.8em;
+  height: 8.538em;
+  margin-top: .769em;
+  margin-right: 2.01em;
   border-top: 1px solid black;
-  padding-bottom: 0px;
+  padding-top: .769em;
+  overflow: auto;
 }
 
-/* line 115, ../sass/main.scss */
-.description {
-  text-align: center;
+/* line 137, ../sass/main.scss */
+.tileInvis1 {
+  display: none;
 }
 
-/* line 119, ../sass/main.scss */
+/* line 141, ../sass/main.scss */
+.tileInvis {
+  display: none;
+}
+
+/* line 146, ../sass/main.scss */
+h3 {
+  display: block;
+  min-height: 2.5em;
+  font-size: 1.05em;
+  margin: 0;
+  font-weight: 400;
+  font-family: calibri;
+  text-align: left;
+}
+
+/* line 157, ../sass/main.scss */
+p {
+  text-align: left;
+  font-family: Candara;
+  font-size: 12px;
+  line-height: 1.3em;
+}
+
+/* line 164, ../sass/main.scss */
+.test1 {
+  text-align: left;
+}
+
+/* line 168, ../sass/main.scss */
+.tileText {
+  text-align: left;
+}
+
+/* line 172, ../sass/main.scss */
+h4 {
+  display: block;
+  font-size: 1.05em;
+  margin-left: 0px;
+  margin-right: 0px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-weight: 400;
+  font-family: calibri;
+  text-align: left;
+}
+
+/* line 184, ../sass/main.scss */
+.contactAreaQuarter {
+  width: 221px;
+  height: 32.24px;
+  margin: 0 32.24px 32.24px 0;
+}
+
+/* line 190, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
 
-/* @media desktop 
+/*--------------------------------
+--------------------------------*/
+@media (min-width: 548px) {
+  /* line 199, ../sass/main.scss */
+  .floatTitle {
+    margin-left: calc(50% - 15.85em);
+  }
 
-.stripe {
-    padding-left: ;
+  /* line 203, ../sass/main.scss */
+  .tileInvis1 {
+    display: inline-block;
+  }
 }
-
-.twoh2 {
-    margin-left:calc(50% - 420px);
-}
-
-
-.listHolder {
-    margin-top:2.8em;
-    width:700px;
-    margin-left:calc(50% - 400px);
-}
-
-.threeh2 {
-    margin-left:calc(50% - 400px)
-}
-
-.tileContainer {
-    position:relative;
-    margin-left:calc(50% - 400px);
-    width:900px;
-}
-
-.displayToggle {
-    display:default;
-}
-
-.list {
-    column-count:2;
-}
-
-*/
-@media (min-width: 28.5em) and (max-width: 53.25em) {
-  /* line 172, ../sass/main.scss */
+@media (min-width: 801px) {
+  /* line 210, ../sass/main.scss */
   .tile {
-    width: 9em;
-    height: 9em;
-  }
-
-  /* line 178, ../sass/main.scss */
-  .descriptionContainer {
-    display: block;
-  }
-
-  /* line 182, ../sass/main.scss */
-  .tileText {
-    display: none;
-  }
-}
-@media (min-width: 53.315em) {
-  /* line 188, ../sass/main.scss */
-  .tile {
-    width: 9em;
-    height: 9em;
-  }
-
-  /* line 193, ../sass/main.scss */
-  .descriptionContainer {
-    display: block;
-  }
-
-  /* line 197, ../sass/main.scss */
-  .tileText {
-    display: none;
-  }
-
-  /* line 201, ../sass/main.scss */
-  .tileContainer {
-    max-width: 36.5em;
-  }
-
-  /* line 205, ../sass/main.scss */
-  .tile {
+    margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 208, ../sass/main.scss */
-  .list {
+  /* line 215, ../sass/main.scss */
+  .tileInvis {
+    display: inline-block;
+  }
+
+  /* line 219, ../sass/main.scss */
+  .floatTitle {
+    margin-left: calc(50% - 23.7em);
+  }
+}
+@media (min-width: 1054px) {
+  /* line 225, ../sass/main.scss */
+  .floatTitle {
+    float: left;
+    margin-left: 0px;
+    margin-bottom: 22em;
+  }
+
+  /* line 231, ../sass/main.scss */
+  .threeh2 {
+    text-align: right;
+  }
+
+  /* line 235, ../sass/main.scss */
+  .tileContainer {
+    max-width: 1024px;
+  }
+}
+@media (min-width: 1200px) {
+  /* line 241, ../sass/main.scss */
+  .tile {
+    margin-right: 2.01em;
+  }
+
+  /* line 246, ../sass/main.scss */
+  .floatTitle {
+    margin-right: 2.01em;
+  }
+
+  /* line 251, ../sass/main.scss */
+  .tileContainer {
+    max-width: 1020px;
+  }
+}
+/* 
+@media (min-width: 58.56em) {
+	.tileContainer {
+       max-width:50em;
+       margin-left:auto;
+       margin-right:auto;
+    }
+    .list { 
     list-style-position: inside;
     -moz-column-count: 2;
     -moz-column-gap: 25px;
@@ -219,21 +272,19 @@ li {
     -webkit-column-gap: 25px;
     column-count: 2;
     column-gap: 25px;
-  }
-
-  /* line 217, ../sass/main.scss */
-  .list > li {
-    display: list-item;
-  }
+    }
+    .list > li {
+    display:list-item;
+    }
 }
+
 @media (min-width: 65.632em) {
-  /* line 223, ../sass/main.scss */
-  .circleImg {
-    display: block;
-  }
-
-  /* line 226, ../sass/main.scss */
-  .tileContainer:nth-child(2) {
-    background-color: red;
-  }
+	.circleImg {
+	display:block;
+	}
+	
+	
 }
+
+
+*/
