--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -9,6 +9,7 @@ body {
   min-height: 410px;
   position: relative;
   padding: 3em .769em;
+  border-top: black 1px solid;
 }
 
 /* line 21, ../sass/main.scss */
@@ -31,7 +32,7 @@ body {
 
 /* line 36, ../sass/main.scss */
 .four {
-  background-color: #aaa;
+  background-color: white;
 }
 
 /* line 40, ../sass/main.scss */
@@ -108,7 +109,6 @@ li {
   font-weight: 200;
   text-align: left;
   display: block;
-  border-top: 1px solid black;
   color: black;
   margin-top: -1px;
   padding-top: 8px;
@@ -116,7 +116,7 @@ li {
   margin-bottom: 0em;
 }
 
-/* line 125, ../sass/main.scss */
+/* line 124, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -129,17 +129,17 @@ li {
   overflow: auto;
 }
 
-/* line 137, ../sass/main.scss */
+/* line 136, ../sass/main.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 141, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 146, ../sass/main.scss */
+/* line 145, ../sass/main.scss */
 h3 {
   display: block;
   min-height: 2.5em;
@@ -150,7 +150,7 @@ h3 {
   text-align: left;
 }
 
-/* line 157, ../sass/main.scss */
+/* line 156, ../sass/main.scss */
 p {
   text-align: left;
   font-family: Candara;
@@ -158,17 +158,24 @@ p {
   line-height: 1.3em;
 }
 
-/* line 164, ../sass/main.scss */
-.test1 {
-  text-align: left;
-}
-
-/* line 168, ../sass/main.scss */
+/* line 165, ../sass/main.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 172, ../sass/main.scss */
+/* line 169, ../sass/main.scss */
+.contactQuarter {
+  display: inline-block;
+  margin: 0;
+  margin-right: 32.24px;
+}
+
+/* line 175, ../sass/main.scss */
+.contactHalf {
+  display: inline-block;
+}
+
+/* line 181, ../sass/main.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -181,14 +188,26 @@ h4 {
   text-align: left;
 }
 
-/* line 184, ../sass/main.scss */
+/* line 193, ../sass/main.scss */
+textarea {
+  margin: 0;
+}
+
+/* line 197, ../sass/main.scss */
 .contactAreaQuarter {
+  box-sizing: border-box;
   width: 221px;
   height: 32.24px;
   margin: 0 32.24px 32.24px 0;
 }
 
-/* line 190, ../sass/main.scss */
+/* line 205, ../sass/main.scss */
+#message {
+  width: 291px;
+  min-height: 3.5em;
+}
+
+/* line 210, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
@@ -196,95 +215,70 @@ h4 {
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 548px) {
-  /* line 199, ../sass/main.scss */
+  /* line 219, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 203, ../sass/main.scss */
+  /* line 223, ../sass/main.scss */
   .tileInvis1 {
     display: inline-block;
   }
+
+  /* line 227, ../sass/main.scss */
+  #message {
+    width: 474.24;
+  }
 }
 @media (min-width: 801px) {
-  /* line 210, ../sass/main.scss */
+  /* line 234, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 215, ../sass/main.scss */
+  /* line 239, ../sass/main.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 219, ../sass/main.scss */
+  /* line 243, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 23.7em);
   }
 }
 @media (min-width: 1054px) {
-  /* line 225, ../sass/main.scss */
+  /* line 249, ../sass/main.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 22em;
   }
 
-  /* line 231, ../sass/main.scss */
+  /* line 255, ../sass/main.scss */
   .threeh2 {
     text-align: right;
+    border-top: 1px solid black;
   }
 
-  /* line 235, ../sass/main.scss */
+  /* line 260, ../sass/main.scss */
   .tileContainer {
     max-width: 1024px;
   }
 }
 @media (min-width: 1200px) {
-  /* line 241, ../sass/main.scss */
+  /* line 266, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
   }
 
-  /* line 246, ../sass/main.scss */
+  /* line 271, ../sass/main.scss */
   .floatTitle {
     margin-right: 2.01em;
   }
 
-  /* line 251, ../sass/main.scss */
+  /* line 276, ../sass/main.scss */
   .tileContainer {
     max-width: 1020px;
   }
 }
-/* 
-@media (min-width: 58.56em) {
-	.tileContainer {
-       max-width:50em;
-       margin-left:auto;
-       margin-right:auto;
-    }
-    .list { 
-    list-style-position: inside;
-    -moz-column-count: 2;
-    -moz-column-gap: 25px;
-    -webkit-column-count: 2;
-    -webkit-column-gap: 25px;
-    column-count: 2;
-    column-gap: 25px;
-    }
-    .list > li {
-    display:list-item;
-    }
-}
-
-@media (min-width: 65.632em) {
-	.circleImg {
-	display:block;
-	}
-	
-	
-}
-
-
-*/
