--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -220,6 +220,12 @@ p {
 }
 
 /* line 212, ../sass/main.scss */
+.contactTitle {
+  border-bottom: 1px solid black;
+  padding-bottom: 31px;
+}
+
+/* line 217, ../sass/main.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -227,7 +233,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 219, ../sass/main.scss */
+/* line 224, ../sass/main.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -235,7 +241,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 228, ../sass/main.scss */
+/* line 233, ../sass/main.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -248,25 +254,25 @@ h4 {
   text-align: left;
 }
 
-/* line 240, ../sass/main.scss */
+/* line 245, ../sass/main.scss */
 textarea {
   margin: 0;
 }
 
-/* line 244, ../sass/main.scss */
+/* line 249, ../sass/main.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 251, ../sass/main.scss */
+/* line 256, ../sass/main.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 257, ../sass/main.scss */
+/* line 262, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
@@ -274,124 +280,139 @@ textarea {
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 548px) {
-  /* line 268, ../sass/main.scss */
+  /* line 273, ../sass/main.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 276, ../sass/main.scss */
+  /* line 281, ../sass/main.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 280, ../sass/main.scss */
+  /* line 285, ../sass/main.scss */
   .listContainer {
     min-width: 474px;
   }
 
-  /* line 284, ../sass/main.scss */
+  /* line 289, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 288, ../sass/main.scss */
+  /* line 293, ../sass/main.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 292, ../sass/main.scss */
+  /* line 297, ../sass/main.scss */
   #message {
     width: 474.24;
     min-height: 5.5em;
   }
 }
 @media (min-width: 801px) {
-  /* line 299, ../sass/main.scss */
+  /* line 304, ../sass/main.scss */
   .threeh2list {
     text-align: left;
     border-top: 1px solid black;
   }
 
-  /* line 304, ../sass/main.scss */
+  /* line 309, ../sass/main.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 312, ../sass/main.scss */
+  /* line 317, ../sass/main.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 318, ../sass/main.scss */
+  /* line 323, ../sass/main.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 331, ../sass/main.scss */
+  /* line 336, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 336, ../sass/main.scss */
+  /* line 341, ../sass/main.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 340, ../sass/main.scss */
+  /* line 345, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 23.7em);
   }
 
-  /* line 344, ../sass/main.scss */
+  /* line 349, ../sass/main.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 348, ../sass/main.scss */
+  /* line 353, ../sass/main.scss */
   .info {
     display: none;
   }
 
-  /* line 352, ../sass/main.scss */
+  /* line 357, ../sass/main.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 356, ../sass/main.scss */
+  /* line 361, ../sass/main.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 362, ../sass/main.scss */
+  /* line 367, ../sass/main.scss */
+  .floatInfo {
+    margin-top: 48px;
+  }
+
+  /* line 371, ../sass/main.scss */
+  .topRow {
+    padding-top: 15px;
+  }
+
+  /* line 378, ../sass/main.scss */
+  .contactTitle {
+    border-bottom: none;
+  }
+
+  /* line 382, ../sass/main.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 366, ../sass/main.scss */
+  /* line 386, ../sass/main.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 22em;
   }
 
-  /* line 372, ../sass/main.scss */
+  /* line 392, ../sass/main.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 376, ../sass/main.scss */
+  /* line 396, ../sass/main.scss */
   .threeh2 {
     text-align: right;
     border-top: 1px solid black;
   }
 
-  /* line 381, ../sass/main.scss */
+  /* line 401, ../sass/main.scss */
   .tileContainer {
     max-width: 1024px;
   }
