--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -37,32 +37,37 @@ body {
 /* line 39, ../sass/main.scss */
 .headtext {
   text-align: right;
+  margin-right: 32.24px;
 }
 
-/* line 43, ../sass/main.scss */
+/* line 44, ../sass/main.scss */
 .test {
   display: block;
   text-align: right;
 }
 
-/* line 48, ../sass/main.scss */
+/* line 49, ../sass/main.scss */
 .headh1 {
   font-size: 1.9em;
+  font-family: calibri;
+  font-weight: 200;
 }
 
-/* line 52, ../sass/main.scss */
+/* line 55, ../sass/main.scss */
 .headh2 {
   font-size: 1.4em;
+  font-family: calibri;
+  font-weight: 200;
 }
 
-/* line 56, ../sass/main.scss */
+/* line 61, ../sass/main.scss */
 .mainh2 {
   font-size: 1.4em;
   display: block;
   orphans: 3;
 }
 
-/* line 66, ../sass/main.scss */
+/* line 71, ../sass/main.scss */
 .circleImg {
   display: none;
   position: absolute;
@@ -73,7 +78,7 @@ body {
   background-color: #000;
 }
 
-/* line 76, ../sass/main.scss */
+/* line 81, ../sass/main.scss */
 .list li {
   display: list-item;
   padding: 0;
@@ -82,16 +87,18 @@ body {
   list-style: none;
 }
 
-/* line 84, ../sass/main.scss */
+/* line 90, ../sass/main.scss */
 .list li:before {
   content: "\003E \020";
   font-family: "consolas";
   font-weight: 200;
   margin-left: -.17em;
   width: 0.8em;
+  float: left;
+  margin-bottom: .1em;
 }
 
-/* line 92, ../sass/main.scss */
+/* line 100, ../sass/main.scss */
 .list {
   border-top: black solid 1px;
   display: inline-block;
@@ -108,20 +115,20 @@ body {
   overflow: visible;
 }
 
-/* line 108, ../sass/main.scss */
+/* line 116, ../sass/main.scss */
 .listHidden {
   display: none;
   margin-right: 0;
 }
 
-/* line 113, ../sass/main.scss */
+/* line 121, ../sass/main.scss */
 .tileContainer {
   display: block;
   margin: 0 auto;
   text-align: center;
 }
 
-/* line 119, ../sass/main.scss */
+/* line 127, ../sass/main.scss */
 .floatTitle {
   display: block;
   width: 13.8em;
@@ -132,7 +139,7 @@ body {
   margin-right: .769em;
 }
 
-/* line 132, ../sass/main.scss */
+/* line 140, ../sass/main.scss */
 .threeh2 {
   font-family: "calibri";
   font-weight: 200;
@@ -145,7 +152,7 @@ body {
   margin-bottom: 0em;
 }
 
-/* line 145, ../sass/main.scss */
+/* line 153, ../sass/main.scss */
 .tile {
   display: inline-block;
   position: relative;
@@ -158,7 +165,7 @@ body {
   overflow: auto;
 }
 
-/* line 157, ../sass/main.scss */
+/* line 165, ../sass/main.scss */
 .listContainer {
   padding: 0;
   max-width: 759.48px;
@@ -169,17 +176,17 @@ body {
   min-height: 265px;
 }
 
-/* line 167, ../sass/main.scss */
+/* line 175, ../sass/main.scss */
 .tileInvis1 {
   display: none;
 }
 
-/* line 171, ../sass/main.scss */
+/* line 179, ../sass/main.scss */
 .tileInvis {
   display: none;
 }
 
-/* line 176, ../sass/main.scss */
+/* line 184, ../sass/main.scss */
 h3 {
   display: block;
   min-height: 2.5em;
@@ -190,7 +197,7 @@ h3 {
   text-align: left;
 }
 
-/* line 187, ../sass/main.scss */
+/* line 195, ../sass/main.scss */
 p {
   text-align: left;
   font-family: Candara;
@@ -198,12 +205,12 @@ p {
   line-height: 1.3em;
 }
 
-/* line 194, ../sass/main.scss */
+/* line 202, ../sass/main.scss */
 .tileText {
   text-align: left;
 }
 
-/* line 198, ../sass/main.scss */
+/* line 206, ../sass/main.scss */
 .floatInfo {
   display: none;
   float: right;
@@ -214,18 +221,18 @@ p {
   margin-top: 33px;
 }
 
-/* line 208, ../sass/main.scss */
+/* line 216, ../sass/main.scss */
 .infoText {
   text-align: center;
 }
 
-/* line 212, ../sass/main.scss */
+/* line 220, ../sass/main.scss */
 .contactTitle {
   border-bottom: 1px solid black;
   padding-bottom: 31px;
 }
 
-/* line 217, ../sass/main.scss */
+/* line 225, ../sass/main.scss */
 .contactQuarter {
   display: inline-block;
   margin: 0;
@@ -233,7 +240,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 224, ../sass/main.scss */
+/* line 232, ../sass/main.scss */
 .contactHalf {
   display: inline-block;
   margin: 0;
@@ -241,7 +248,7 @@ p {
   margin-top: 12.32px;
 }
 
-/* line 233, ../sass/main.scss */
+/* line 241, ../sass/main.scss */
 h4 {
   display: block;
   font-size: 1.05em;
@@ -254,25 +261,25 @@ h4 {
   text-align: left;
 }
 
-/* line 245, ../sass/main.scss */
+/* line 253, ../sass/main.scss */
 textarea {
   margin: 0;
 }
 
-/* line 249, ../sass/main.scss */
+/* line 257, ../sass/main.scss */
 .contactAreaQuarter {
   box-sizing: border-box;
   width: 219px;
   height: 32.24px;
 }
 
-/* line 256, ../sass/main.scss */
+/* line 264, ../sass/main.scss */
 #message {
   width: 221px;
   min-height: 3.5em;
 }
 
-/* line 262, ../sass/main.scss */
+/* line 270, ../sass/main.scss */
 .displayToggle {
   display: none;
 }
@@ -280,139 +287,139 @@ textarea {
 /*--------------------------------
 --------------------------------*/
 @media (min-width: 548px) {
-  /* line 273, ../sass/main.scss */
+  /* line 281, ../sass/main.scss */
   .list .liToggle {
     display: none;
   }
 
-  /* line 281, ../sass/main.scss */
+  /* line 289, ../sass/main.scss */
   .listHidden {
     display: inline-block;
   }
 
-  /* line 285, ../sass/main.scss */
+  /* line 293, ../sass/main.scss */
   .listContainer {
     min-width: 474px;
   }
 
-  /* line 289, ../sass/main.scss */
+  /* line 297, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 15.85em);
   }
 
-  /* line 293, ../sass/main.scss */
+  /* line 301, ../sass/main.scss */
   .tileInvis1 {
     display: inline-block;
   }
 
-  /* line 297, ../sass/main.scss */
+  /* line 305, ../sass/main.scss */
   #message {
     width: 474.24;
     min-height: 5.5em;
   }
 }
 @media (min-width: 801px) {
-  /* line 304, ../sass/main.scss */
+  /* line 312, ../sass/main.scss */
   .threeh2list {
     text-align: left;
     border-top: 1px solid black;
   }
 
-  /* line 309, ../sass/main.scss */
+  /* line 317, ../sass/main.scss */
   .listTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 100px;
   }
 
-  /* line 317, ../sass/main.scss */
+  /* line 325, ../sass/main.scss */
   .listContainer {
     min-width: 727.32px;
     min-height: 265px;
     padding: 0;
   }
 
-  /* line 323, ../sass/main.scss */
+  /* line 331, ../sass/main.scss */
   ul .displayToggle {
     display: list-item;
   }
 
-  /* line 336, ../sass/main.scss */
+  /* line 344, ../sass/main.scss */
   .tile {
     margin-right: 2.01em;
     display: inline-block;
   }
 
-  /* line 341, ../sass/main.scss */
+  /* line 349, ../sass/main.scss */
   .tileInvis {
     display: inline-block;
   }
 
-  /* line 345, ../sass/main.scss */
+  /* line 353, ../sass/main.scss */
   .floatTitle {
     margin-left: calc(50% - 23.7em);
   }
 
-  /* line 349, ../sass/main.scss */
+  /* line 357, ../sass/main.scss */
   .floatInfo {
     display: inline-block;
   }
 
-  /* line 353, ../sass/main.scss */
+  /* line 361, ../sass/main.scss */
   .info {
     display: none;
   }
 
-  /* line 357, ../sass/main.scss */
+  /* line 365, ../sass/main.scss */
   .tileContainer {
     max-width: 763px;
   }
 
-  /* line 361, ../sass/main.scss */
+  /* line 369, ../sass/main.scss */
   .listTileContainer {
     max-width: 250px;
   }
 }
 @media (min-width: 1054px) {
-  /* line 367, ../sass/main.scss */
+  /* line 375, ../sass/main.scss */
   .floatInfo {
     margin-top: 48px;
   }
 
-  /* line 371, ../sass/main.scss */
+  /* line 379, ../sass/main.scss */
   .topRow {
     padding-top: 15px;
   }
 
-  /* line 378, ../sass/main.scss */
+  /* line 386, ../sass/main.scss */
   .contactTitle {
     border-bottom: none;
   }
 
-  /* line 382, ../sass/main.scss */
+  /* line 390, ../sass/main.scss */
   .listContainer {
     min-height: 265px;
   }
 
-  /* line 386, ../sass/main.scss */
+  /* line 394, ../sass/main.scss */
   .floatTitle {
     float: left;
     margin-left: 0px;
     margin-bottom: 22em;
   }
 
-  /* line 392, ../sass/main.scss */
+  /* line 400, ../sass/main.scss */
   .listTitle {
     margin-bottom: 100px;
   }
 
-  /* line 396, ../sass/main.scss */
+  /* line 404, ../sass/main.scss */
   .threeh2 {
     text-align: right;
     border-top: 1px solid black;
   }
 
-  /* line 401, ../sass/main.scss */
+  /* line 409, ../sass/main.scss */
   .tileContainer {
     max-width: 1024px;
   }
